# ngham

./: CMakeLists.txt
.github/workflows/: static-anlysis.yml  test.yml
include/ngham/: crc_ccitt.h  ngham.h  ngham_extension.h  ngham_packets.h  ngham_spp.h
src/: crc_ccitt.c  ngham.c  ngham_extension.c  ngham_spp.c
tests/: test.c
